--- a/config/samples/gitops_v1alpha1_gitops.yaml
+++ b/config/samples/gitops_v1alpha1_gitops.yaml
@@ -2,7 +2,7 @@
 apiVersion: gitops.turbonomic.io/v1alpha1
 kind: GitOps
 metadata:
-  name: gitops-sample
+  name: gitops-sample-1
 spec:
   config:
   - commitMode: direct
@@ -11,7 +11,7 @@ spec:
 apiVersion: gitops.turbonomic.io/v1alpha1
 kind: GitOps
 metadata:
-  name: gitops-sample
+  name: gitops-sample-2
 spec:
   config:
   - commitMode: direct
@@ -22,7 +22,19 @@ spec:
 apiVersion: gitops.turbonomic.io/v1alpha1
 kind: GitOps
 metadata:
-  name: gitops-sample
+  name: gitops-sample-3
+spec:
+  config:
+  - commitMode: direct
+    selector: "^turbo.*$"
+    whitelist:
+    - app1
+    - app2
+---
+apiVersion: gitops.turbonomic.io/v1alpha1
+kind: GitOps
+metadata:
+  name: gitops-sample-4
 spec:
   config:
   - commitMode: direct
