Updated README. Made email optional in credentials.

--- a/config/samples/gitops_v1alpha1_gitops.yaml
+++ b/config/samples/gitops_v1alpha1_gitops.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   config:
   - commitMode: direct
-    selector: "*"
+    selector: "^.*$"
 ---
 apiVersion: gitops.turbonomic.io/v1alpha1
 kind: GitOps
