--- a/config/crd/bases/gitops.turbonomic.io_gitops.yaml
+++ b/config/crd/bases/gitops.turbonomic.io_gitops.yaml
@@ -72,6 +72,7 @@ spec:
                             will be created by
                           type: string
                       required:
+                      - email
                       - secretName
                       - secretNamespace
                       - username
